--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "*.{js,jsx,ts,tsx,css,md}": "npx prettier --write"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "lint-staged": "^15.2.2",
     "next": "14.1.0",
     "react": "^18",
@@ -32,6 +34,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "contentful": "^10.6.22",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
